03_NetworkPolicy_lab/default-deny.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-all-msclient 
spec:
 podSelector:
